@@ -69,7 +69,7 @@ Note that producing the documentation is long (typically 10-15 minutes).
 </p>
 
 <center><h1>Using Batteries Included</h1></center>
-<center><h2>Simple method</h2></center>
+<center><h2>Simple method (using OCamlBuild)</h2></center>
 To use Batteries Included, the easiest solution is to take 
 advantage of both findlib and ocamlbuild. OCamlBuild is part
 of your installation of OCaml and findlib is generally installed
@@ -93,7 +93,7 @@ Included, please take a look at <a href="api/index.html"
 target="_top">the API documentation</a> and <a href="extensions.html">
 the set of language extensions introduced by Batteries</a>.
 
-<center><h2>Simple method without OCamlBuild</h2></center>
+<center><h2>Simple method (without OCamlBuild)</h2></center>
 For convenience, OCaml Batteries Included also provides custom tools which
 you may use instead of the regular <code>ocaml</code>, <code>ocamlc</code>,
 <code>ocamlopt</code> and <code>ocamlcp</code>. To invoke these, 
@@ -120,7 +120,21 @@ you may use instead of the regular <code>ocaml</code>, <code>ocamlc</code>,
   </dd>
 </dl>
 
+For instance, if you want to compile the "cat" implementation
+which you may find in the examples/ subdirectory, you may just
+invoke
+<code class="example">
+ocamlfind batteries/ocamlc cat.ml
+</code>
+or, for building optimized native code,
+<code class="example">
+ocamlfind batteries/ocamlopt cat.ml
+</code>
 That's it.
+
+
+
+
 <center><h2>More control</h2></center>
 File <a href="../myocamlbuild"><code>doc/batteries/myocamlbuild.ml</code></a>
 is an extension of OCamlBuild. It defines <emph>tags</emph>, which you
@@ -185,6 +199,56 @@ without using package <code>threads</code>.</dd>
 
 For more information on how to use these packages, please see the documentation of
 <a href="http://projects.camlcity.org/projects/findlib.html">findlib</a>.
+
+<center><h2>Another method (using OMake)</h2></center>
+Building a project with OMake is fairly simple.
+You just need to take advantage of OMake's built-in findlib support by
+adding the following to your OMakefile:
+<code class="example">
+USE_OCAMLFIND = true
+
+OCAMLPACKS[] +=
+   batteries.pa_openin.syntax
+   batteries.pa_where.syntax
+   batteries.pa_batteries.syntax
+   batteries
+
+OCAMLDEPFLAGS += -syntax camlp4o
+OCAMLFLAGS += -syntax camlp4o
+</code>
+
+Here's a complete OMakefile for building the "cat" implementation you will
+find under the examples/ subdirectory:
+
+<code class="example">
+USE_OCAMLFIND = true
+
+OCAMLPACKS[] +=
+   batteries.pa_openin.syntax
+   batteries.pa_where.syntax
+   batteries.pa_batteries.syntax
+   batteries
+
+OCAMLDEPFLAGS += -syntax camlp4o
+OCAMLFLAGS += -syntax camlp4o
+
+
+OCamlProgram(cat, cat)
+</code>
+
+
+The above OCAMLPACKS definition uses Batteries and all the non-destructive
+syntax extensions available as of 2008-11-16; this corresponds to the
+<code>use_batteries</code> tag in ocamlbuild.
+
+If you only want to use Batteries as a library, without syntax extensions, use
+
+<code class="example">
+OCAMLPACKS[] += batteries
+</code>
+
+and drop the <code>OCAMLDEPFLAGS</code> and <code>OCAMLFLAGS</code>
+lines in the above examples, as they are no longer needed.
 </body>
 </html>
 
