@@ -1,5 +1,9 @@
 2008-11-16  David Teller  <David.Teller@univ-orleans.fr>
 
+	* src/core/batteries_core_threads.ml: removed [SetLabels]
+
+	* src/main/threads/batteries.ml: removed [SetLabels]
+
 	* src/core/extlib/extSet.mli: [Labels], [ExceptionLess] added
 
 	* src/core/extlib/extArray.ml*: [Cap.Labels] added
